--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,8 +16,9 @@ material = "1.12.0"
 activity = "1.10.0"
 lifecycle = "2.8.7"
 constraintlayout = "2.2.0"
+fragment = "1.8.6"
 
-navigation = "2.8.6"
+navigation = "2.8.7"
 viewbinding = "2.0.2"
 dagger = "2.55"
 ksp = "2.1.0-1.0.29"
@@ -26,6 +27,7 @@ coil = "3.1.0"
 kotlinSerializationJson = "1.8.0"
 converterKotlinSerialization = "1.0.0"
 retrofit = "2.11.0"
+paging = "3.3.6"
 exoplayer = "1.5.1"
 
 [libraries]
@@ -39,12 +41,15 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment" }
 
 dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger" }
 dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room"}
+paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 coil = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil" }
 coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
@@ -67,6 +72,7 @@ network = ["retrofit", "retrofit-converter-kotlin-serialization"]
 room = ["room-ktx", "room-runtime"]
 navigation = ["navigation-fragment", "navigation-ui"]
 gradle-plugins = ["gradleplugin-android", "gradleplugin-kotlin", "gradleplugin-ksp"]
+lifecycle = ["androidx-lifecycle-runtime", "androidx-lifecycle-viewmodel"]
 exoplayer = ["exoplayer", "exoplayer-dash", "exoplayer-ui"]
 
 [plugins]
