--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ room = "2.6.1"
 coil = "3.1.0"
 kotlinSerializationJson = "1.8.0"
 converterKotlinSerialization = "1.0.0"
+okhttp = "4.12.0"
 retrofit = "2.11.0"
 paging = "3.3.6"
 exoplayer = "1.5.1"
@@ -52,6 +53,8 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room"}
 paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 coil = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil" }
 coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-converter-kotlin-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "converterKotlinSerialization" }
 kotlin-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerializationJson" }
@@ -68,7 +71,7 @@ gradleplugin-ksp = { module = "com.google.devtools.ksp:com.google.devtools.ksp.g
 
 [bundles]
 coil = ["coil", "coil-network"]
-network = ["retrofit", "retrofit-converter-kotlin-serialization"]
+network = ["retrofit", "retrofit-converter-kotlin-serialization", "okhttp", "okhttp-logging", "kotlin-serialization-json"]
 room = ["room-ktx", "room-runtime"]
 navigation = ["navigation-fragment", "navigation-ui"]
 gradle-plugins = ["gradleplugin-android", "gradleplugin-kotlin", "gradleplugin-ksp"]
